--- a/nicepage.css
+++ b/nicepage.css
@@ -36862,10 +36862,28 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-header .u-icon-1 {
     margin-left: 194px;
   }
+
+  .u-header .u-icon-2 {
+    margin-top: 20px;
+  }
 }
 @media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 135px;
+  }
+
+  .u-header .u-image-1 {
+    margin-top: 17px;
+  }
+
   .u-header .u-icon-1 {
     margin-left: 122px;
+  }
+
+  .u-header .u-icon-2 {
+    margin-top: -64px;
+    margin-right: 73px;
+    margin-bottom: 17px;
   }
 }
  .u-footer {
@@ -36877,12 +36895,17 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-text-1 {
-  width: 417px;
-  margin: 49px auto;
+  margin: 49px 50px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
     min-height: 99px;
+  }
+
+  .u-footer .u-text-1 {
+    width: 550px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 @media (max-width: 991px) {
@@ -36894,14 +36917,21 @@ a.u-link.u-text-hover-grey-90:hover {
   .u-footer .u-sheet-1 {
     min-height: 57px;
   }
+
+  .u-footer .u-text-1 {
+    width: 540px;
+  }
 }
 @media (max-width: 575px) {
   .u-footer .u-sheet-1 {
-    min-height: 36px;
+    min-height: 143px;
   }
 
   .u-footer .u-text-1 {
-    width: 340px;
+    width: auto;
+    margin-left: -50px;
+    margin-right: -50px;
+    margin-bottom: 60px;
   }
 }
 
