--- a/Home.css
+++ b/Home.css
@@ -780,7 +780,7 @@
 }
 
 .u-section-4 .u-layout-cell-2 {
-  min-height: 289px;
+  min-height: 324px;
 }
 
 .u-section-4 .u-container-layout-2 {
@@ -796,17 +796,12 @@
 
 .u-section-4 .u-text-2 {
   font-weight: 700;
-  margin: 6px auto 0 0;
+  margin: 0;
 }
 
 .u-section-4 .u-text-3 {
   font-size: 1rem;
-  margin: 20px 0 0;
-}
-
-.u-section-4 .u-btn-1 {
-  background-image: none;
-  padding: 0;
+  margin: 26px 0 0;
 }
 
 .u-section-4 .u-layout-cell-3 {
@@ -831,7 +826,7 @@
 }
 
 .u-section-4 .u-layout-cell-4 {
-  min-height: 289px;
+  min-height: 323px;
   background-image: none;
 }
 
@@ -840,15 +835,7 @@
 }
 
 .u-section-4 .u-text-6 {
-  margin-bottom: 0;
-  margin-top: 0;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-
-.u-section-4 .u-text-7 {
-  margin: 20px 1px 0 0;
+  margin: 0 1px;
 }
 
 @media (max-width: 1199px) {
@@ -861,7 +848,7 @@
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 238px;
+    min-height: 267px;
   }
 
   .u-section-4 .u-layout-cell-3 {
@@ -873,11 +860,12 @@
   }
 
   .u-section-4 .u-layout-cell-4 {
-    min-height: 238px;
+    min-height: 266px;
   }
 
-  .u-section-4 .u-text-7 {
+  .u-section-4 .u-text-6 {
     margin-right: 0;
+    margin-left: 0;
   }
 }
 
@@ -896,12 +884,6 @@
 
   .u-section-4 .u-text-2 {
     width: auto;
-    margin-top: 0;
-    margin-right: 0;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-top: 26px;
   }
 
   .u-section-4 .u-layout-cell-3 {
@@ -1373,28 +1355,29 @@
 }
 
 .u-section-8 .u-container-layout-2 {
-  padding: 30px;
+  padding: 32px 30px;
 }
 
 .u-section-8 .u-text-1 {
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  margin: 17px 151px 0 0;
-}
-
-.u-section-8 .u-text-2 {
   text-transform: none;
   font-size: 2.25rem;
   font-weight: 700;
-  margin: 14px 0 0;
+  margin: 0;
 }
 
-.u-section-8 .u-text-3 {
+.u-section-8 .u-text-2 {
   font-size: 1.25rem;
-  margin: 28px 0 0;
+  margin: 29px 0 0;
 }
 
 .u-section-8 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-8 .u-btn-2 {
+  background-image: none;
+  border-style: none;
+  margin: 0 auto 0 0;
   padding: 0;
 }
 
@@ -1407,26 +1390,26 @@
   padding: 30px;
 }
 
-.u-section-8 .u-text-4 {
+.u-section-8 .u-text-3 {
   text-transform: none;
   font-size: 2.25rem;
   font-weight: 700;
   margin: 23px 0 0;
 }
 
-.u-section-8 .u-icon-1 {
+.u-section-8 .u-icon-2 {
   width: 64px;
   height: 64px;
   margin: 17px auto 0 0;
 }
 
-.u-section-8 .u-icon-2 {
+.u-section-8 .u-icon-3 {
   width: 64px;
   height: 64px;
   margin: -64px auto 0 107px;
 }
 
-.u-section-8 .u-text-5 {
+.u-section-8 .u-text-4 {
   font-size: 1.25rem;
   margin: 132px 0 0;
 }
@@ -1440,21 +1423,21 @@
   padding: 0;
 }
 
-.u-section-8 .u-text-6 {
+.u-section-8 .u-text-5 {
   text-transform: uppercase;
   font-size: 1.125rem;
   letter-spacing: 1px;
   margin: 101px auto 0;
 }
 
-.u-section-8 .u-icon-3 {
+.u-section-8 .u-icon-4 {
   width: 124px;
   height: 124px;
   margin: 29px auto 0 148px;
   padding: 0;
 }
 
-.u-section-8 .u-icon-4 {
+.u-section-8 .u-icon-5 {
   width: 124px;
   height: 124px;
   margin: -130px 148px 0 auto;
@@ -1480,10 +1463,6 @@
     min-height: 267px;
   }
 
-  .u-section-8 .u-text-1 {
-    margin-right: 61px;
-  }
-
   .u-section-8 .u-layout-cell-2 {
     min-height: 307px;
   }
@@ -1492,8 +1471,20 @@
     min-height: 781px;
   }
 
+  .u-section-8 .u-text-5 {
+    width: auto;
+    margin-top: 91px;
+    margin-right: 148px;
+  }
+
   .u-section-8 .u-icon-4 {
-    margin-top: 20px;
+    margin-top: 16px;
+    margin-right: 148px;
+    margin-left: auto;
+  }
+
+  .u-section-8 .u-icon-5 {
+    margin-top: 43px;
   }
 
   .u-section-8 .u-image-1 {
@@ -1514,27 +1505,34 @@
     min-height: 100px;
   }
 
-  .u-section-8 .u-text-1 {
-    margin-right: 0;
+  .u-section-8 .u-container-layout-2 {
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   .u-section-8 .u-layout-cell-2 {
     min-height: 100px;
   }
 
-  .u-section-8 .u-icon-2 {
+  .u-section-8 .u-icon-3 {
     margin-left: 78px;
   }
 
   .u-section-8 .u-layout-cell-3 {
-    min-height: 100px;
+    min-height: 749px;
   }
 
-  .u-section-8 .u-icon-3 {
-    margin-left: 113px;
+  .u-section-8 .u-text-5 {
+    margin-right: 113px;
   }
 
   .u-section-8 .u-icon-4 {
+    margin-top: 24px;
+    margin-right: 112px;
+  }
+
+  .u-section-8 .u-icon-5 {
+    margin-top: 25px;
     margin-right: 113px;
   }
 
@@ -1566,7 +1564,7 @@
     padding-right: 30px;
   }
 
-  .u-section-8 .u-icon-4 {
+  .u-section-8 .u-icon-5 {
     margin-top: -130px;
   }
 
@@ -1580,23 +1578,30 @@
     width: 340px;
   }
 
-  .u-section-8 .u-text-2 {
+  .u-section-8 .u-text-1 {
     font-size: 1.5rem;
   }
 
-  .u-section-8 .u-text-4 {
+  .u-section-8 .u-text-3 {
     font-size: 1.5rem;
   }
 
   .u-section-8 .u-layout-cell-3 {
-    min-height: 524px;
+    min-height: 644px;
   }
 
   .u-section-8 .u-icon-4 {
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-right: 65px;
+  }
+
+  .u-section-8 .u-icon-5 {
+    margin-top: 29px;
+    margin-right: 65px;
   }
 
   .u-section-8 .u-image-1 {
     height: 205px;
+    margin-top: 29px;
   }
 }
