--- a/Home.css
+++ b/Home.css
@@ -82,6 +82,11 @@
   margin: 37px 1px 0;
 }
 
+.u-section-1 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
 .u-section-1 .u-list-item-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
@@ -107,6 +112,11 @@
 .u-section-1 .u-text-6 {
   font-style: italic;
   margin: 37px 1px 0;
+}
+
+.u-section-1 .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-list-item-3 {
@@ -136,6 +146,11 @@
   margin: 37px 1px 0;
 }
 
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  padding: 0;
+}
+
 .u-section-1 .u-list-item-4 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
 }
@@ -161,6 +176,11 @@
 .u-section-1 .u-text-10 {
   font-style: italic;
   margin: 37px 1px 0;
+}
+
+.u-section-1 .u-btn-4 {
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
@@ -902,6 +922,11 @@
     min-height: 458px;
   }
 
+  .u-section-4 .u-container-layout-2 {
+    padding-left: 0;
+    padding-bottom: 0;
+  }
+
   .u-section-4 .u-text-2 {
     width: auto;
   }
@@ -1143,7 +1168,6 @@
 .u-section-6 .u-image-1 {
   width: 355px;
   height: 355px;
-  background-image: url("images/coffee.png");
   background-position: 50% 50%;
   text-align: start;
   margin: 40px auto 0;
@@ -1435,7 +1459,7 @@
 }
 
 .u-section-8 .u-layout-cell-3 {
-  min-height: 696px;
+  min-height: 697px;
   background-image: none;
 }
 
@@ -1451,23 +1475,23 @@
 }
 
 .u-section-8 .u-icon-4 {
-  width: 124px;
-  height: 124px;
-  margin: 29px auto 0 148px;
+  width: 61px;
+  height: 61px;
+  margin: 29px auto 0 220px;
   padding: 0;
 }
 
 .u-section-8 .u-icon-5 {
-  width: 124px;
-  height: 124px;
-  margin: -130px 148px 0 auto;
+  width: 61px;
+  height: 61px;
+  margin: -61px 226px 0 auto;
   padding: 0;
 }
 
 .u-section-8 .u-image-1 {
   height: 378px;
-  margin-top: 49px;
-  margin-bottom: -30px;
+  margin-top: 106px;
+  margin-bottom: 0;
 }
 
 @media (max-width: 1199px) {
@@ -1505,6 +1529,7 @@
 
   .u-section-8 .u-icon-5 {
     margin-top: 43px;
+    margin-right: 186px;
   }
 
   .u-section-8 .u-image-1 {
@@ -1542,6 +1567,10 @@
     min-height: 749px;
   }
 
+  .u-section-8 .u-container-layout-4 {
+    padding: 0;
+  }
+
   .u-section-8 .u-text-5 {
     margin-right: 113px;
   }
@@ -1553,7 +1582,7 @@
 
   .u-section-8 .u-icon-5 {
     margin-top: 25px;
-    margin-right: 113px;
+    margin-right: 142px;
   }
 
   .u-section-8 .u-image-1 {
@@ -1585,7 +1614,7 @@
   }
 
   .u-section-8 .u-icon-5 {
-    margin-top: -130px;
+    margin-top: -61px;
   }
 
   .u-section-8 .u-image-1 {
