--- a/nicepage.css
+++ b/nicepage.css
@@ -37017,26 +37017,30 @@ a.u-link.u-text-hover-grey-90:hover {
   padding: 0;
 }
 @media (max-width: 1199px) {
+  .u-header .u-sheet-1 {
+    min-height: 71px;
+  }
+
   .u-header .u-image-1 {
     width: 94px;
     margin-top: -45px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -60px;
-    margin-right: 0;
+    margin-top: -27px;
+    margin-right: 75px;
   }
 
   .u-header .u-btn-2 {
-    margin-top: -23px;
-    margin-right: 0;
+    margin-top: -52px;
+    margin-right: 237px;
   }
 
   .u-header .u-icon-3 {
     width: 52px;
     height: 52px;
-    margin-top: -57px;
-    margin-left: 334px;
+    margin-top: -61px;
+    margin-left: 232px;
   }
 
   .u-header .u-icon-4 {
@@ -37047,30 +37051,72 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 @media (max-width: 991px) {
+  .u-header .u-btn-1 {
+    margin-top: -68px;
+    margin-right: 155px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -11px;
+    margin-right: 137px;
+  }
+
   .u-header .u-icon-3 {
-    margin-left: 256px;
+    margin-top: -56px;
+    margin-left: 162px;
   }
 
   .u-header .u-icon-4 {
-    margin-left: 327px;
+    margin-top: -52px;
+    margin-bottom: 5px;
+    margin-left: 284px;
   }
 }
 @media (max-width: 767px) {
+  .u-header .u-btn-1 {
+    margin-top: -61px;
+    margin-right: 68px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -17px;
+    margin-right: 46px;
+  }
+
   .u-header .u-icon-3 {
-    margin-left: 192px;
+    margin-top: -61px;
+    margin-left: 137px;
   }
 
   .u-header .u-icon-4 {
-    margin-left: 245px;
+    margin-left: 213px;
   }
 }
 @media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 133px;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: 4px;
+    margin-right: 0;
+  }
+
+  .u-header .u-btn-2 {
+    margin-top: -47px;
+    margin-right: auto;
+    margin-left: -15px;
+  }
+
   .u-header .u-icon-3 {
-    margin-left: 121px;
+    margin-top: -96px;
+    margin-left: auto;
   }
 
   .u-header .u-icon-4 {
-    margin-left: 154px;
+    margin-right: 61px;
+    margin-bottom: 60px;
+    margin-left: auto;
   }
 }
  .u-footer {
