--- a/nicepage.css
+++ b/nicepage.css
@@ -36960,8 +36960,49 @@ a.u-link.u-text-hover-grey-90:hover {
   min-height: 70px;
 }
 
+.u-header .u-btn-1 {
+  background-image: none;
+  border-style: none;
+  align-self: center;
+  margin: -14px 322px 0 auto;
+  padding: 0;
+}
+
+.u-header .u-icon-1 {
+  color: rgb(70, 138, 201) !important;
+}
+
+.u-header .u-image-1 {
+  width: 94px;
+  height: 70px;
+  margin: -38px auto 0 0;
+}
+
+.u-header .u-logo-image-1 {
+  width: 100%;
+  height: 100%;
+}
+
+.u-header .u-text-1 {
+  margin: -64px 133px 0 auto;
+}
+
+.u-header .u-icon-2 {
+  width: 52px;
+  height: 52px;
+  margin: -27px auto 0 405px;
+  padding: 0;
+}
+
+.u-header .u-icon-3 {
+  width: 52px;
+  height: 52px;
+  margin: -52px auto 0 518px;
+  padding: 0;
+}
+
 .u-header .u-menu-1 {
-  margin: 13px 0 0 auto;
+  margin: -48px 0 25px auto;
 }
 
 .u-header .u-nav-1 {
@@ -36971,158 +37012,122 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-header .u-nav-2 {
   font-size: 1rem;
 }
-
-.u-header .u-image-1 {
-  width: 94px;
-  height: 70px;
-  margin: -45px auto 0 0;
-}
-
-.u-header .u-logo-image-1 {
-  width: 100%;
-  height: 100%;
-}
-
-.u-header .u-btn-1 {
-  background-image: none;
-  border-style: none;
-  align-self: center;
-  margin: -60px 134px 0 auto;
-  padding: 0;
-}
-
-.u-header .u-btn-2 {
-  background-image: none;
-  border-style: none;
-  align-self: center;
-  margin: -51px 322px 0 auto;
-  padding: 0;
-}
-
-.u-header .u-icon-2 {
-  color: rgb(70, 138, 201) !important;
-}
-
-.u-header .u-icon-3 {
-  width: 52px;
-  height: 52px;
-  margin: -29px auto 0 405px;
-  padding: 0;
-}
-
-.u-header .u-icon-4 {
-  width: 52px;
-  height: 52px;
-  margin: -52px auto 9px 518px;
-  padding: 0;
-}
 @media (max-width: 1199px) {
-  .u-header .u-sheet-1 {
-    min-height: 71px;
+  .u-header .u-btn-1 {
+    margin-right: 122px;
   }
 
   .u-header .u-image-1 {
     width: 94px;
-    margin-top: -45px;
+    margin-top: -38px;
   }
 
-  .u-header .u-btn-1 {
-    margin-top: -27px;
-    margin-right: 75px;
+  .u-header .u-text-1 {
+    width: auto;
+    margin-top: -36px;
+    margin-right: 165px;
   }
 
-  .u-header .u-btn-2 {
-    margin-top: -52px;
-    margin-right: 237px;
+  .u-header .u-icon-2 {
+    width: 52px;
+    height: 52px;
+    margin-top: -55px;
+    margin-left: 334px;
   }
 
   .u-header .u-icon-3 {
     width: 52px;
     height: 52px;
-    margin-top: -61px;
-    margin-left: 232px;
+    margin-top: -52px;
+    margin-left: 427px;
   }
 
-  .u-header .u-icon-4 {
-    width: 52px;
-    height: 52px;
-    margin-top: -52px;
-    margin-bottom: 8px;
-    margin-left: 427px;
+  .u-header .u-menu-1 {
+    margin-top: -48px;
   }
 }
 @media (max-width: 991px) {
   .u-header .u-btn-1 {
-    margin-top: -68px;
-    margin-right: 155px;
+    margin-top: -19px;
+    margin-right: 120px;
   }
 
-  .u-header .u-btn-2 {
-    margin-top: -11px;
-    margin-right: 137px;
+  .u-header .u-image-1 {
+    margin-top: -33px;
+  }
+
+  .u-header .u-text-1 {
+    margin-top: -36px;
+    margin-right: 165px;
+  }
+
+  .u-header .u-icon-2 {
+    margin-top: -55px;
+    margin-left: 189px;
   }
 
   .u-header .u-icon-3 {
-    margin-top: -56px;
-    margin-left: 162px;
-  }
-
-  .u-header .u-icon-4 {
-    margin-top: -52px;
-    margin-bottom: 5px;
-    margin-left: 284px;
+    margin-left: 327px;
   }
 }
 @media (max-width: 767px) {
-  .u-header .u-sheet-1 {
-    min-height: 89px;
-  }
-
   .u-header .u-btn-1 {
-    margin-top: -55px;
-    margin-right: 85px;
+    margin-top: -20px;
+    margin-right: 32px;
   }
 
-  .u-header .u-btn-2 {
-    margin-top: -17px;
-    margin-right: 58px;
+  .u-header .u-image-1 {
+    margin-top: -33px;
+  }
+
+  .u-header .u-text-1 {
+    margin-top: -38px;
+    margin-right: 75px;
+  }
+
+  .u-header .u-icon-2 {
+    margin-top: -53px;
+    margin-left: 139px;
   }
 
   .u-header .u-icon-3 {
-    margin-top: -66px;
-    margin-left: 137px;
-  }
-
-  .u-header .u-icon-4 {
-    margin-bottom: 25px;
-    margin-left: 213px;
+    margin-left: 245px;
   }
 }
 @media (max-width: 575px) {
-  .u-header .u-sheet-1 {
-    min-height: 133px;
-  }
-
   .u-header .u-btn-1 {
-    margin-top: 4px;
-    margin-right: 0;
+    margin-top: -29px;
+    margin-right: 68px;
   }
 
-  .u-header .u-btn-2 {
-    margin-top: -52px;
-    margin-right: auto;
-    margin-left: -14px;
+  .u-header .u-image-1 {
+    margin-top: -23px;
+  }
+
+  .u-header .u-text-1 {
+    margin-top: -47px;
+    margin-right: 89px;
+  }
+
+  .u-header .u-icon-2 {
+    width: 37px;
+    height: 37px;
+    margin-top: 58px;
+    margin-right: -11px;
+    margin-left: auto;
   }
 
   .u-header .u-icon-3 {
-    margin-top: -91px;
+    width: 36px;
+    height: 36px;
+    margin-top: -88px;
+    margin-right: -10px;
     margin-left: auto;
   }
 
-  .u-header .u-icon-4 {
-    margin-right: 61px;
-    margin-bottom: 39px;
-    margin-left: auto;
+  .u-header .u-menu-1 {
+    margin-top: -83px;
+    margin-bottom: 27px;
   }
 }
  .u-footer {
